--- a/AstronomyBot/Cosmo.csproj
+++ b/AstronomyBot/Cosmo.csproj
@@ -163,6 +163,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="LuisConnect.cs" />
+    <Compile Include="LuisMain.cs" />
     <Compile Include="openWeather.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
