--- a/AstronomyBot/packages.config
+++ b/AstronomyBot/packages.config
@@ -8,7 +8,9 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.Azure.DocumentDB" version="1.22.0" targetFramework="net46" />
+  <package id="Microsoft.Azure.KeyVault" version="2.3.2" targetFramework="net46" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net46" />
+  <package id="Microsoft.Azure.KeyVault.WebKey" version="2.0.7" targetFramework="net46" />
   <package id="Microsoft.Bot.Builder" version="3.15.2.2" targetFramework="net46" />
   <package id="Microsoft.Bot.Builder.Azure" version="3.15.2.2" targetFramework="net46" />
   <package id="Microsoft.Bot.Builder.History" version="3.15.2.2" targetFramework="net46" />
@@ -24,6 +26,7 @@
   <package id="Microsoft.IdentityModel.Tokens" version="5.1.4" targetFramework="net46" />
   <package id="Microsoft.Net.Compilers" version="2.0.1" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.8" targetFramework="net46" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.7" targetFramework="net46" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net46" />
   <package id="System.Collections" version="4.3.0" targetFramework="net46" />
@@ -32,5 +35,5 @@
   <package id="System.Spatial" version="5.7.0" targetFramework="net46" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net46" />
   <package id="System.Web.Http.Common" version="4.0.20126.16343" targetFramework="net46" />
-  <package id="WindowsAzure.Storage" version="7.2.1" targetFramework="net46" />
+  <package id="WindowsAzure.Storage" version="9.3.0" targetFramework="net46" />
 </packages>
